# optunahub

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  conftest.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/: pull_request_template.md
.github/workflows/: checks.yaml  coverage.yml  github-pages.yaml  linkcheck.yml  mac-tests.yml  pypi-publish.yaml  sphinx-build.yml  tests.yaml  windows-tests.yml
_sources/: index.rst.txt
docs/: README.md  conf.py  index.rst
docs/source/: benchmarks.rst  conf.py  faq.rst  index.rst  optunahub.rst  reference.rst  samplers.rst  tutorials_for_contributors.rst
docs/source/_static/css/: custom.css
docs/source/_templates/: custom_summary.rst
docs/source/tutorials/: index.rst  plot-in-optuna-dashboard.rst
docs/source/tutorials_for_users/: how_to_use_benchmarks.rst  index.rst  plot-in-optuna-dashboard.rst
optunahub/: __init__.py  _conf.py  hub.py  version.py
optunahub/benchmarks/: __init__.py  _base_problem.py  _constrained_mixin.py
optunahub/samplers/: __init__.py  _simple_base.py
recipes/: 001_first.py  002_registration.py  003_pruner.py  004_visualization.py  005_debugging.py  006_benchmarks_basic.py  007_benchmarks_advanced.py  008_callbacks.py  008_unit_tests.py  README.rst
tests/: test_benchmarks.py  test_hub.py  test_optunahub.py
tests/package_for_test_hub/: __init__.py  implementation.py  sampler.py
